--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": " ${workspaceFolder}/build/db.exe",
+      "program": "${workspaceFolder}/build/db_exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
